objects/JunoDoc__Juno_Doc_Post_Trigger_Action__c/JunoDoc__Juno_Doc_Post_Trigger_Action__c.object-meta.xml
<CustomObject>
    <label>Juno Doc Post Trigger Action</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Juno Doc Post Trigger Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Juno Doc Post Trigger Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>