objects/JunoDoc__Juno_Doc_Post_Trigger_Action__c/fields/JunoDoc__Field__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>