objects/JunoDoc__Juno_Doc_Post_Trigger_Action__c/fields/JunoDoc__Value__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>